; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/bhnd/nvram/extr_bhnd_nvram_data_bcmraw.c_bhnd_nvram_bcmraw_free.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/bhnd/nvram/extr_bhnd_nvram_data_bcmraw.c_bhnd_nvram_bcmraw_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bhnd_nvram_data = type { i32 }
%struct.bhnd_nvram_bcmraw = type { i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bhnd_nvram_data*)* @bhnd_nvram_bcmraw_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bhnd_nvram_bcmraw_free(%struct.bhnd_nvram_data* %0) #0 {
  %2 = alloca %struct.bhnd_nvram_data*, align 8
  %3 = alloca %struct.bhnd_nvram_bcmraw*, align 8
  store %struct.bhnd_nvram_data* %0, %struct.bhnd_nvram_data** %2, align 8
  %4 = load %struct.bhnd_nvram_data*, %struct.bhnd_nvram_data** %2, align 8
  %5 = bitcast %struct.bhnd_nvram_data* %4 to %struct.bhnd_nvram_bcmraw*
  store %struct.bhnd_nvram_bcmraw* %5, %struct.bhnd_nvram_bcmraw** %3, align 8
  %6 = load %struct.bhnd_nvram_bcmraw*, %struct.bhnd_nvram_bcmraw** %3, align 8
  %7 = getelementptr inbounds %struct.bhnd_nvram_bcmraw, %struct.bhnd_nvram_bcmraw* %6, i32 0, i32 0
  %8 = load i32*, i32** %7, align 8
  %9 = icmp ne i32* %8, null
  br i1 %9, label %10, label %15

10:                                               ; preds = %1
  %11 = load %struct.bhnd_nvram_bcmraw*, %struct.bhnd_nvram_bcmraw** %3, align 8
  %12 = getelementptr inbounds %struct.bhnd_nvram_bcmraw, %struct.bhnd_nvram_bcmraw* %11, i32 0, i32 0
  %13 = load i32*, i32** %12, align 8
  %14 = call i32 @bhnd_nv_free(i32* %13)
  br label %15

15:                                               ; preds = %10, %1
  ret void
}

declare dso_local i32 @bhnd_nv_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
